syntax = "proto3";

package io.restorecommerce.contact_point;

import "io/restorecommerce/resource_base.proto";
import "io/restorecommerce/meta.proto";
import "io/restorecommerce/auth.proto";
import "io/restorecommerce/status.proto";
import "io/restorecommerce/options.proto";

// Used by resolvers
import "io/restorecommerce/address.proto";
import "io/restorecommerce/contact_point_type.proto";
import "io/restorecommerce/timezone.proto";
import "io/restorecommerce/locale.proto";

service ContactPointService {
  rpc Read (io.restorecommerce.resourcebase.ReadRequest) returns (ContactPointListResponse) {
    option (io.restorecommerce.options.is_query) = true;
  };
  rpc Create (ContactPointList) returns (ContactPointListResponse);
  rpc Delete (io.restorecommerce.resourcebase.DeleteRequest) returns (io.restorecommerce.resourcebase.DeleteResponse);
  rpc Update (ContactPointList) returns (ContactPointListResponse);
  rpc Upsert (ContactPointList) returns (ContactPointListResponse);
}

message Deleted {
  optional string id = 1;
}

message ContactPointList {
  repeated ContactPoint items = 1;
  optional uint32 total_count = 2;
  optional io.restorecommerce.auth.Subject subject = 3;
}

message ContactPointListResponse {
  repeated ContactPointResponse items = 1;
  optional uint32 total_count = 2;
  optional io.restorecommerce.status.OperationStatus operation_status = 3;
}

message ContactPointResponse {
  optional ContactPoint payload = 1;
  optional io.restorecommerce.status.Status status = 2;
}

message ContactPoint {
  optional string id = 1;
  optional io.restorecommerce.meta.Meta meta = 2;
  optional string physical_address_id = 3 [
    (io.restorecommerce.options.resolver) = {
      target_type: ".io.restorecommerce.address.Address",
      target_service: "master_data",
      target_sub_service: "address",
      target_method: "Read",
      field_name: "physicalAddress",
    }
  ];
  optional string website = 5;
  optional string email = 6;
  repeated string contact_point_type_ids = 7 [
    (io.restorecommerce.options.resolver) = {
      target_type: ".io.restorecommerce.contact_point_type.ContactPointType",
      target_service: "master_data",
      target_sub_service: "contact_point_type",
      target_method: "Read",
      field_name: "contactPointTypes",
    }
  ];
  optional string telephone = 8;
  optional string timezone_id = 9 [
    (io.restorecommerce.options.resolver) = {
      target_type: ".io.restorecommerce.timezone.Timezone",
      target_service: "master_data",
      target_sub_service: "timezone",
      target_method: "Read",
      field_name: "timezone",
    }
  ];
  optional string locale_id = 10 [
    (io.restorecommerce.options.resolver) = {
      target_type: ".io.restorecommerce.locale.Locale",
      target_service: "master_data",
      target_sub_service: "locale",
      target_method: "Read",
      field_name: "locale",
    }
  ];
  optional string name = 11;
  optional string description = 12;
}
